syntax = "proto3";

option go_package = "proto/demo";

service DemoService {
  rpc SayHello(DemoRequest) returns (DemoResponse) {}
}

message DemoRequest {
    string name = 1;
}

message DemoResponse {
    string text = 2;
}